tests/NormalTests/paczka1/fuzzy1/94190133.err
Error in line 10: YB7R A575 457,3
Error in line 15: YB7R A271 1,3
Error in line 17: 2ISppa A607 66,3
Error in line 25: A607 A271 88,1
Error in line 26: A607 A114 92,0
